--- a/t/xpan.ini
+++ b/t/xpan.ini
@@ -1,3 +1,3 @@
 [XPAN::Injector::CPAN]
-cpan_mirror = http://drove.pobox.com:9990
-backpan_mirror = http://drove.pobox.com:9991
+cpan_mirror = http://cpan.pobox.com:9999
+backpan_mirror = http://backpan.pobox.com:9999
