test/config for ignoring older META.yml

--- a/t/xpan.ini
+++ b/t/xpan.ini
@@ -1,3 +1,6 @@
+[XPAN::Analyzer]
+meta_yml_ignore_lower_version = warn
+
 [XPAN::Injector::CPAN]
 cpan_mirror = http://cpan.pobox.com:9999
 backpan_mirror = http://backpan.pobox.com:9999
